Code changes for registration

--- a/DemoProjectCore/Web.config
+++ b/DemoProjectCore/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Sql" connectionString="data source=RAVIKUMAR\SQLEXPRESS;  User Id=RK; Password=ravi123; initial catalog=Super-car; Integrated Security=true;"/>
+    <add name="Sql" connectionString="data source=RAVIKUMAR\SQLEXPRESS;  User Id=RK; Password=ravi123; initial catalog=MSDemo; Integrated Security=true;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
